# marketfiyati_mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  CONTRIBUTING.md  Dockerfile  README.md  package-lock.json  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
app/: __init__.py  config.py  lifespan.py  main.py  mcp.py
app/api/: __init__.py  dependencies.py  router.py
app/api/routes/: __init__.py  categories.py  health.py  search.py
app/models/: __init__.py  marketfiyat.py
app/services/: __init__.py  marketfiyat_service.py
tests/: __init__.py  conftest.py  test_categories.py  test_health.py  test_models.py  test_search.py  test_service_integration.py
