[project]
name = "marketfiyati-mcp"
version = "1.0.0"
description = "A Model Context Protocol (MCP) server for accessing Turkish market product prices"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Ahmet Yigit Budak", email = "yibudak@users.noreply.github.com"}
]
keywords = ["mcp", "fastapi", "turkish-markets", "price-comparison", "marketfiyati"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "fastmcp>=2.11.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.14.0",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

[project.urls]
Homepage = "https://github.com/yibudak/marketfiyati_mcp"
Repository = "https://github.com/yibudak/marketfiyati_mcp"
Issues = "https://github.com/yibudak/marketfiyati_mcp/issues"
Documentation = "https://github.com/yibudak/marketfiyati_mcp#readme"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]
